Fix jumping height issue

--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
 :root {
   --padding: 7px;
   --background: rgb(74, 144, 226);
@@ -11,7 +9,7 @@
 }
 
 html {
-  font-family: 'Roboto', helvetica, arial, sans-serif;
+  font-family: helvetica, arial, sans-serif;
   color: white;
 }
 
@@ -206,5 +204,9 @@ html {
 }
 
 .hidden {
+  visibility: hidden;
+}
+
+.undisplayed {
   display: none;
 }
